<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>vtkBirchQFramePlayerWidget</class>
 <widget class="QWidget" name="vtkBirchQFramePlayerWidget">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>514</width>
    <height>34</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>Frame player</string>
  </property>
  <layout class="QHBoxLayout" name="horizontalLayout">
   <property name="margin">
    <number>0</number>
   </property>
   <item>
    <widget class="QToolButton" name="firstFrameButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Go to start</string>
     </property>
     <property name="text">
      <string>&lt;&lt;</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/frameToFirst.png</normaloff>:/Icons/frameToFirst.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="previousFrameButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Step backward</string>
     </property>
     <property name="text">
      <string>&lt;</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/frameBack.png</normaloff>:/Icons/frameBack.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
     <property name="autoRepeat">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="playReverseButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Play backward / Pause</string>
     </property>
     <property name="text">
      <string>PlayBack</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/framePlayReverse.png</normaloff>
       <normalon>:/Icons/pause.png</normalon>:/Icons/framePlayReverse.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="playButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Play forward / Pause</string>
     </property>
     <property name="text">
      <string>Play</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/framePlay.png</normaloff>
       <normalon>:/Icons/pause.png</normalon>:/Icons/framePlay.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="nextFrameButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Step forward</string>
     </property>
     <property name="text">
      <string>&gt;</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/frameForward.png</normaloff>:/Icons/frameForward.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
     <property name="autoRepeat">
      <bool>true</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="lastFrameButton">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="toolTip">
      <string>Go to end</string>
     </property>
     <property name="text">
      <string>&gt;&gt;</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/frameToLast.png</normaloff>:/Icons/frameToLast.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QToolButton" name="repeatButton">
     <property name="toolTip">
      <string>Repeat</string>
     </property>
     <property name="text">
      <string>Repeat</string>
     </property>
     <property name="icon">
      <iconset resource="../vtkBirchQWidgets.qrc">
       <normaloff>:/Icons/repeat.png</normaloff>:/Icons/repeat.png</iconset>
     </property>
     <property name="iconSize">
      <size>
       <width>24</width>
       <height>24</height>
      </size>
     </property>
     <property name="checkable">
      <bool>true</bool>
     </property>
     <property name="checked">
      <bool>false</bool>
     </property>
    </widget>
   </item>
   <item>
    <widget class="QDoubleSpinBox" name="speedFactorSpinBox">
     <property name="toolTip">
      <string>Frame rate</string>
     </property>
     <property name="prefix">
      <string>fps </string>
     </property>
     <property name="decimals">
      <number>0</number>
     </property>
     <property name="minimum">
      <double>1.000000000000000</double>
     </property>
     <property name="maximum">
      <double>60.000000000000000</double>
     </property>
     <property name="singleStep">
      <double>1.000000000000000</double>
     </property>
     <property name="value">
      <double>25.000000000000000</double>
     </property>
    </widget>
   </item>
   <item>
    <widget class="vtkBirchSliderWidget" name="frameSlider" native="true">
     <property name="enabled">
      <bool>false</bool>
     </property>
     <property name="decimals" stdset="0">
      <number>2</number>
     </property>
     <property name="minimum" stdset="0">
      <double>-1.000000000000000</double>
     </property>
     <property name="maximum" stdset="0">
      <double>-1.000000000000000</double>
     </property>
     <property name="value" stdset="0">
      <double>-1.000000000000000</double>
     </property>
    </widget>
   </item>
  </layout>
 </widget>
 <customwidgets>
  <customwidget>
   <class>vtkBirchSliderWidget</class>
   <extends>QWidget</extends>
   <header>vtkBirchSliderWidget.h</header>
  </customwidget>
 </customwidgets>
 <resources>
  <include location="../vtkBirchQWidgets.qrc"/>
 </resources>
 <connections/>
</ui>
